# Papyrus_Desktop

./: .electron-builder.config.js  .gitignore  AGENTS.md  CHANGELOG.md  ELECTRON.md  Papyrus.spec  PapyrusAPI.spec  README-DEV.md  README.ja.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIX_REPORT.md  build-all.bat  electron-builder-debug.json  electron-builder.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run.pyw  skill_path.txt  start-dev.bat  version-manager.bat
assets/: icon.icns
backend/: 1  jest.config.js  package-lock.json  package.json  tsconfig.json
docs/: AI_README.md  AI_TOOLS_DEMO.md  API.md  CHANGE-GUIDE.md  CLI_MANAGER_DESIGN.md  COMPLETION_DEMO.md  ELECTRON_V41_SETUP.md  FILE_INDEX.md  PRD.md  PROJECT_STRUCTURE.md  README.md  cleanup-test-report-2026-05-27.md  frontend-style-guide.md  tool_call_approval.md  踩坑记录.md
electron/: diagnostic-preload.js  diagnostic-window.js  main.js  preload.js  security-validators.js
frontend/: README.md  TAILWIND_GUIDE.md  index.html  launcher.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
scripts/: build-electron.js  extract-changelog.js  generate-release-notes.js  set-version.js  test-build-local.ps1  test-build.bat  verify-tests-noui.py  verify-tests.py
src/: Papyrus.py  Papyrus.pyw  log_viewer.py  logger.py
tests/: test_ai.py  test_api.py  test_api_simple.py  test_config.py  test_integration.py  test_mcp.py  test_papyrus.py  test_provider.py  test_sidebar_v3.py
tools/: build-electron-simple.js  (+5 more)
(+305 files in other folders)
