[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "papyrus"
version = "2.0.0-beta.2"
description = "AI-powered learning card system"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = [
    "tests/",
    "tools/",
    "backup/",
    "build/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tools.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "mcp.server"
ignore_errors = true

[[tool.mypy.overrides]]
module = "mcp.vault_tools"
ignore_errors = true
